NBNP-443 Fix contrast issue with Scroll Up link

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_scrollup.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_scrollup.scss
@@ -1,6 +1,8 @@
 #scrollUp {
   box-shadow: inset 0 0 2px 1px #fff;
-  opacity: .7;
+  color: #fff;
+  opacity: .75;
+
   &:focus,
   &:hover {
     opacity: 1;
